minor fix www in CNAME

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
         <li>I'm a work in progress.</li>
         <li>reach out to me <strong>bhardwajvishu@protonmail.com</strong></li>
         </ul>
-        <a href="https://github.com/vishubhardwaj">Github</a>
+        <a href="https://github.com/vishubhardwaj" target="_blank" rel="noreferrer">Github</a>
 </body>
 </html>
