added logos and shortened intro content

--- a/index.html
+++ b/index.html
@@ -4,17 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6Q8YY5V0FQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6Q8YY5V0FQ');
+</script>
 </head>
 <body>
-    <h1>About me 😄</h1>
-    <ul>
-        <li>Hello there, I'm Vishu.</li>
-        <li>I do Web design and development.</li>
-        <li>ex-Food Engineer & Product developer. </li>
-        <li>Hobby Artist and Gardener.</li>
+    <header>
+        <h1>About me 😄</h1>
+        <img src="./assets/pictures/pixel_self_portrait.png" alt="self portrait image">
+    </header>
+    <main>
+        <section>
+        <ul>
+        <li>Hello there, I'm <span>Vishu</span>.</li>
+        <li>I do Web design.</li>
+        <li>Hobby Artist, baker and Gardener.</li>
         <li>I'm a work in progress.</li>
-        <li>reach out to me <strong>bhardwajvishu@protonmail.com</strong></li>
         </ul>
-        <a href="https://github.com/vishubhardwaj" target="_blank" rel="noreferrer">Github</a>
+        </section>
+    </main>
+    <footer>
+        <address>
+            <a href="https://github.com/vishubhardwaj" target="_blank" rel="noreferrer">
+                <img src="./assets/logo/logo2 github.png" alt="github logo">
+            </a>
+            <a href="mailto:bhardwajvishu@protonmail.com">
+                <img src="./assets/logo/logo1 email.png" alt="email logo">
+            </a>
+            <a href="https://www.linkedin.com/in/vishu-b-92786b2a1/" target="_blank" rel="noopener noreferrer">
+                <img src="./assets/logo/logo3 linkedin.png" alt="linkedin logo">
+            </a>
+        </address>
+    </footer>
 </body>
 </html>
