added css and fixed html

--- a/index.html
+++ b/index.html
@@ -13,34 +13,36 @@
 
   gtag('config', 'G-6Q8YY5V0FQ');
 </script>
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
-        <h1>About me 😄</h1>
-        <img src="./assets/pictures/pixel_self_portrait.png" alt="self portrait image">
+        <h1>About me</h1>
+        <img src="./assets/svgs/pixel_self_portrait.svg" alt="self portrait svg" id="main-pic">
+        <div class="contact">
+            <a href="https://github.com/vishubhardwaj" target="_blank" rel="noreferrer">
+                <i class="fa-brands fa-github logo"></i>
+            </a>
+            <address>
+            <a href="mailto:bhardwajvishu@protonmail.com">
+                <i class="fa-solid fa-envelope logo"></i>
+            </a>
+            </address>
+            <a href="https://www.linkedin.com/in/vishu-b-92786b2a1/" target="_blank" rel="noopener noreferrer">
+                <i class="fa-brands fa-linkedin-in logo"></i>
+            </a>
+        </div>
     </header>
     <main>
         <section>
         <ul>
         <li>Hello there, I'm <span>Vishu</span>.</li>
-        <li>I do Web design.</li>
+        <li>I do <span>Web design</span>.</li>
         <li>Hobby Artist, baker and Gardener.</li>
         <li>I'm a work in progress.</li>
         </ul>
         </section>
     </main>
-    <footer>
-        <address>
-            <a href="https://github.com/vishubhardwaj" target="_blank" rel="noreferrer">
-                <img src="./assets/logo/logo2 github.png" alt="github logo">
-            </a>
-            <a href="mailto:bhardwajvishu@protonmail.com">
-                <img src="./assets/logo/logo1 email.png" alt="email logo">
-            </a>
-            <a href="https://www.linkedin.com/in/vishu-b-92786b2a1/" target="_blank" rel="noopener noreferrer">
-                <img src="./assets/logo/logo3 linkedin.png" alt="linkedin logo">
-            </a>
-        </address>
-    </footer>
 </body>
 </html>
