--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 </head>
 <body>
     <header>
-        <h1>About me</h1>
         <img src="./assets/svgs/pixel_self_portrait.svg" alt="self portrait svg" id="main-pic">
         <div class="contact">
             <a href="https://github.com/vishubhardwaj" target="_blank" rel="noreferrer">
@@ -39,9 +38,58 @@
         <ul>
         <li>Hello there, I'm <span>Vishu</span>.</li>
         <li>I do <span>Web design</span>.</li>
-        <li>Hobby Artist, baker and Gardener.</li>
-        <li>I'm a work in progress.</li>
         </ul>
+        </section>
+        <section>
+            <h3>My tools</h3>
+            <ul>
+                <li><i class="fa-brands fa-html5"></i></li>
+                <li><i class="fa-brands fa-css3-alt"></i></li>
+                <li><i class="fa-brands fa-js"></i></li>
+                <li><i class="fa-brands fa-react"></i></li>
+                <li><i class="fa-brands fa-node"></i></li>
+                <li><i class="fa-brands fa-python"></i></li>
+                <li><i class="fa-brands fa-square-git"></i></li>
+                <li><i class="fa-brands fa-linux"></i></li>
+            </ul>
+        </section>
+        <section>
+            <h3>Works</h3>
+            <ul>
+                <li>
+                    <a href="https://vishubhardwaj.github.io/casualDev-webDev/odin_foundations/landing_page/">
+                        Landing page design
+                    </a>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h3>
+                Contact Me
+            </h3>
+            <div class="contact">
+                <a href="https://github.com/vishubhardwaj" target="_blank" rel="noreferrer">
+                    <i class="fa-brands fa-github logo"></i>
+                </a>
+                <address>
+                <a href="mailto:bhardwajvishu@protonmail.com">
+                    <i class="fa-solid fa-envelope logo"></i>
+                </a>
+                </address>
+                <a href="https://www.linkedin.com/in/vishu-b-92786b2a1/" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-linkedin-in logo"></i>
+                </a>
+            </div>
+            <div class="contact-form">
+                <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
+<script>
+  hbspt.forms.create({
+    region: "na1",
+    portalId: "44762689",
+    formId: "6beb91e2-78c3-409d-a7f0-827a40e19836"
+  });
+</script>
+            </div>
         </section>
     </main>
 </body>
