added resume and tweaked HTML

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Portfolio</title>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6Q8YY5V0FQ"></script>
 <script>
@@ -19,6 +19,7 @@
 <body>
     <header>
         <img src="./assets/svgs/pixel_self_portrait.svg" alt="self portrait svg" id="main-pic">
+        
         <div class="contact">
             <a href="https://github.com/vishubhardwaj" target="_blank" rel="noreferrer">
                 <i class="fa-brands fa-github logo"></i>
@@ -36,8 +37,9 @@
     <main>
         <section>
         <ul>
-        <li>Hello there, I'm <span>Vishu</span>.</li>
-        <li>I do <span>Web design</span>.</li>
+        <li>Hello there, I'm <span>Vishu</span></li>
+        <li><span><code>Web developer</code></span></li>
+        <li><a href="./resume.html" target="_blank" rel="noreferrer" id="resume">Resume</a></li>
         </ul>
         </section>
         <section>
