refactor: html-added classes

--- a/index.html
+++ b/index.html
@@ -33,16 +33,25 @@
                 <i class="fa-brands fa-linkedin-in logo"></i>
             </a>
         </div>
+
+        <div>
+            <p>
+                Hello there,
+            </p>
+            <p>
+                I'm <span class="special_text">Vishu</span>
+            </p>
+            <p>
+                <span class="special_text">
+                    Web developer
+                </span>
+            </p>
+        </div>
     </header>
     <main>
-        <section>
-        <ul>
-        <li>Hello there, I'm <span>Vishu</span></li>
-        <li><span><code>Web developer</code></span></li>
-        <li><a href="./resume.html" target="_blank" rel="noreferrer" id="resume">Resume</a></li>
-        </ul>
+        <section id="section_hero">
         </section>
-        <section>
+        <section id="section_tools">
             <h3>My tools</h3>
             <ul>
                 <li><i class="fa-brands fa-html5"></i></li>
@@ -55,7 +64,7 @@
                 <li><i class="fa-brands fa-linux"></i></li>
             </ul>
         </section>
-        <section>
+        <section id="section_works">
             <h3>Works</h3>
             <ul>
                 <li>
@@ -65,7 +74,7 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section id="section_contact">
             <h3>
                 Contact Me
             </h3>
@@ -82,6 +91,7 @@
                     <i class="fa-brands fa-linkedin-in logo"></i>
                 </a>
             </div>
+            <a href="./resume.html" target="_blank" rel="noreferrer" id="resume">Resume</a>
             <div class="contact-form">
                 <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
 <script>
