--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 I'm <span class="special_text">Vishu</span>
             </p>
             <p>
-                <span class="special_text">
-                    Web developer
+                <span>
+                    Web designer and developer
                 </span>
             </p>
         </div>
@@ -64,7 +64,7 @@
                 <li><i class="fa-brands fa-linux"></i></li>
             </ul>
         </section>
-        <section id="section_works">
+        <!-- <section id="section_works">
             <h3>Works</h3>
             <ul>
                 <li>
@@ -73,7 +73,7 @@
                     </a>
                 </li>
             </ul>
-        </section>
+        </section> -->
         <section id="section_contact">
             <h3>
                 Contact Me
@@ -91,7 +91,7 @@
                     <i class="fa-brands fa-linkedin-in logo"></i>
                 </a>
             </div>
-            <a href="./resume.html" target="_blank" rel="noreferrer" id="resume">Resume</a>
+            <!-- <a href="./resume.html" target="_blank" rel="noreferrer" id="resume">Resume</a> -->
             <div class="contact-form">
                 <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
 <script>
